syntax = "proto3";
import "Enum.proto";
package cspb.msg;


message CsFastLogin {
    int64 player_id = 1;
}
message ScFastLogin {
    ErrCode errCode = 1;
}
message CsLogin {
    string token = 1;
    int64 player_id = 2;
}
message ScLogin {
    ErrCode errCode = 1;
}

message CsEcho {
    string content = 1;
}
message ScEcho {
    string reply = 1;
}

message CsPing {
    int64 seq = 1;
}
message ScPing {
    int64 seq = 1;
}